--- a/EDBMods/Parts/SmallRockets/RO-SmallRockets.cfg
+++ b/EDBMods/Parts/SmallRockets/RO-SmallRockets.cfg
@@ -3031,7 +3031,7 @@
         transformName = thrustTransform
         localRotation = 0,0,0
         localPosition = 0,0,0.0
-        fixedScale = 0.5
+        fixedScale = 0.2
         energy = 0.8
         speed = 1.0
     }
@@ -3533,5 +3533,727 @@
 			maxAmount = 4475.12
 		}
 	}
+	
+}
+
+@PART[EDB-VLM-Adapter]:FOR[RealismOverhaul]
+{
+	%RSSROConfig = True
+	
+	!MODEL{}
+	MODEL
+	{
+		model = EDBMods/Parts/SmallRockets/VLM-Adapter
+		scale = 1,1,1
+	}
+	
+	@scale = 1.0
+	
+}
+
+@PART[EDB-VLM-Control]:FOR[RealismOverhaul]
+{
+	%RSSROConfig = True
+	
+	!MODEL{}
+	MODEL
+	{
+		model = EDBMods/Parts/SmallRockets/VLM-Control
+		scale = 1,1,1
+	}
+	
+	@scale = 1.0
+	
+}
+
+@PART[EDB-VLM-Fairing]:FOR[RealismOverhaul]
+{
+	%RSSROConfig = True
+	
+	!MODEL{}
+	MODEL
+	{
+		model = EDBMods/Parts/SmallRockets/VLM-Fairing
+		scale = 1,1,1
+	}
+	
+	@scale = 1.0
+	
+}
+
+@PART[EDB-VLM-First]:FOR[RealismOverhaul]
+{
+	%RSSROConfig = True
+	
+	!MODEL{}
+	MODEL
+	{
+		model = EDBMods/Parts/SmallRockets/VLM-First
+		scale = 1,1,1
+	}
+	
+	@scale = 1.0
+	
+	@MODULE[ModuleEngines*]{
+		@maxThrust = 450.0
+		
+		@PROPELLANT[SolidFuel]{
+			@name = HTPB
+		}
+		
+		@atmosphereCurve
+		{
+			@key,0 = 0 277.0
+			@key,1 = 1 254.0
+		}
+	}
+	
+	@RESOURCE[SolidFuel]{
+		@name = HTPB
+		@amount = 6620.0
+		@maxAmount = 6620.0
+	}
+	
+	MODULE
+	{
+		name = ModuleEngineConfigs
+		type = ModuleEngines
+		configuration = S-50
+		modded = false
+		CONFIG
+		{
+			name = S-50
+			maxThrust = 450.0
+			heatProduction = 100
+			PROPELLANT
+			{
+				name = HTPB
+				ratio = 1
+				DrawGauge = True
+			}
+			atmosphereCurve
+			{
+				key = 0 277.0
+				key = 1 254.0
+			}
+			curveResource = HTPB
+			thrustCurve
+			{
+				key = 0.98425 0.92
+				key = 0.96965 0.93
+				key = 0.95475 0.94
+				key = 0.93948 0.948
+				key = 0.92393 0.962
+				key = 0.90799 0.98
+				key = 0.89178 0.994
+				key = 0.85806 1
+				key = 0.80449 1
+				key = 0.7477 1
+				key = 0.70974 1
+				key = 0.6522 1
+				key = 0.61319 1
+				key = 0.57371 1
+				key = 0.53376 1
+				key = 0.49353 0.99
+				key = 0.45302 0.98
+				key = 0.41232 0.96
+				key = 0.37147 0.94
+				key = 0.31021 0.92
+				key = 0.26937 0.8
+				key = 0.22858 0.88
+				key = 0.20826 0.86
+				key = 0.18803 0.84
+				key = 0.1679 0.82
+				key = 0.14781 0.8
+				key = 0.12787 0.78
+				key = 0.1084 0.76
+				key = 0.08926 0.74
+				key = 0.07027 0.72
+				key = 0.05137 0.7
+				key = 0.03252 0.65
+				key = 0.01367 0.6
+				key = 0.001 0.25
+			}
+		}
+	}
+	
+}
+
+@PART[EDB-VLM-First]:FOR[RealPlume]:NEEDS[SmokeScreen]{
+
+	PLUME
+    {
+        name = Solid-Lower
+        transformName = thrustTransform
+        localRotation = 0,0,0
+        flarePosition = 0,0,0.0
+        plumePosition = 0,0,0.0
+        fixedScale = 1.0
+        energy = 1
+        speed = 1
+    }
+	@MODULE[ModuleEngines*]
+	{
+		@name = ModuleEnginesRF
+	}
+	@MODULE[ModuleEngineConfigs]
+	{
+		%type = ModuleEnginesRF
+        @CONFIG,*
+		{
+			%powerEffectName = Solid-Lower
+		}
+	}
+
+	
+}
+
+@PART[EDB-VLM-HotStage]:FOR[RealismOverhaul]
+{
+	%RSSROConfig = True
+	
+	!MODEL{}
+	MODEL
+	{
+		model = EDBMods/Parts/SmallRockets/VLM-HotStage
+		scale = 1,1,1
+	}
+	
+	@scale = 1.0
+	
+}
+
+@PART[EDB-VLM-S-44]:FOR[RealismOverhaul]
+{
+	%RSSROConfig = True
+	
+	!MODEL{}
+	MODEL
+	{
+		model = EDBMods/Parts/SmallRockets/VLM-S-44
+		scale = 1,1,1
+	}
+	
+	@scale = 1.0
+	
+	@MODULE[ModuleEngines]{
+		@minThrust = 33.2
+		@maxThrust = 33.2
+		
+		@PROPELLANT[SolidFuel]{
+			@name = HTPB
+		}
+		
+		@atmosphereCurve
+		{
+			@key,0 = 0 288.9
+			@key,1 = 1 100
+		}
+		
+	}
+	
+	@RESOURCE[SolidFuel]{
+		@name = HTPB
+		@amount = 460.0
+		@maxAmount = 460.0
+	}
+	
+	@RESOURCE[MonoPropellant]{
+		@name = Nitrogen
+		@amount = 5000.0
+		@maxAmount = 5000.0
+	}
+	
+	MODULE
+	{
+		name = ModuleEngineConfigs
+		type = ModuleEngines
+		configuration = S-44
+		modded = false
+		CONFIG
+		{
+			name = S-44
+			minThrust = 33.3
+			maxThrust = 33.3
+			heatProduction = 100
+			PROPELLANT
+			{
+				name = HTPB
+				ratio = 1.0
+				DrawGauge = True
+			}
+			atmosphereCurve
+			{
+				key = 0 288.9
+				key = 1 100
+			}
+			curveResource = HTPB
+			thrustCurve
+			{
+				key = 0.998 0.95
+				key = 0.96965 0.96
+				key = 0.95475 0.97
+				key = 0.93948 0.98
+				key = 0.92393 0.985
+				key = 0.90799 0.99
+				key = 0.89178 0.995
+				key = 0.85806 1
+				key = 0.80449 1
+				key = 0.7477 1
+				key = 0.70974 1
+				key = 0.6522 1
+				key = 0.61319 1
+				key = 0.57371 1
+				key = 0.53376 1
+				key = 0.49353 1
+				key = 0.45302 1
+				key = 0.41232 1
+				key = 0.37147 1
+				key = 0.31021 1
+				key = 0.26937 1
+				key = 0.22858 1
+				key = 0.20826 1
+				key = 0.18803 1
+				key = 0.1679 0.99
+				key = 0.14781 0.98
+				key = 0.12787 0.97
+				key = 0.1084 0.95
+				key = 0.08926 0.94
+				key = 0.07027 0.93
+				key = 0.05137 0.925
+				key = 0.03252 0.923
+				key = 0.01367 0.923
+				key = 0.001 0.25
+			}
+		}
+	}
+	
+	!MODULE[ModuleRCSFX]{}
+	
+	MODULE
+	{
+		name = ModuleRCSFX
+		thrusterTransformName = RCSthruster
+		thrusterPower = 0.1
+
+		PROPELLANT
+		{
+			name = Nitrogen
+			ratio = 1.0
+			DrawGauge = True
+		}
+		atmosphereCurve
+		{
+			key = 0 82.0
+			key = 1 1.0
+		}
+	}
+	
+}
+
+@PART[EDB-VLM-S-44]:FOR[RealPlume]:NEEDS[SmokeScreen]{
+
+	PLUME
+    {
+        name = Solid-Vacuum
+        transformName = thrustTransform
+        localRotation = 0,0,0
+        localPosition = 0,0,0.6
+        fixedScale = 0.7
+        energy = 1
+        speed = 1
+    }
+	@MODULE[ModuleEngines*]
+	{
+		@name = ModuleEnginesRF
+	}
+	@MODULE[ModuleEngineConfigs]
+	{
+		%type = ModuleEnginesRF
+        @CONFIG,*
+		{
+			%powerEffectName = Solid-Vacuum
+		}
+	}
+}
+
+@PART[EDB-VLM-S-50]:FOR[RealismOverhaul]
+{
+	%RSSROConfig = True
+	
+	!MODEL{}
+	MODEL
+	{
+		model = EDBMods/Parts/SmallRockets/VLM-S-50
+		scale = 1,1,1
+	}
+	
+	@scale = 1.0
+	
+	@MODULE[ModuleEngines*]{
+		@maxThrust = 450.0
+		
+		@PROPELLANT[SolidFuel]{
+			@name = HTPB
+		}
+		
+		@atmosphereCurve
+		{
+			@key,0 = 0 277.0
+			@key,1 = 1 254.0
+		}
+	}
+	
+	@RESOURCE[SolidFuel]{
+		@name = HTPB
+		@amount = 6620.0
+		@maxAmount = 6620.0
+	}
+	
+	MODULE
+	{
+		name = ModuleEngineConfigs
+		type = ModuleEngines
+		configuration = S-50
+		modded = false
+		CONFIG
+		{
+			name = S-50
+			maxThrust = 450.0
+			heatProduction = 100
+			PROPELLANT
+			{
+				name = HTPB
+				ratio = 1
+				DrawGauge = True
+			}
+			atmosphereCurve
+			{
+				key = 0 277.0
+				key = 1 254.0
+			}
+			curveResource = HTPB
+			thrustCurve
+			{
+				key = 0.98425 0.92
+				key = 0.96965 0.93
+				key = 0.95475 0.94
+				key = 0.93948 0.948
+				key = 0.92393 0.962
+				key = 0.90799 0.98
+				key = 0.89178 0.994
+				key = 0.85806 1
+				key = 0.80449 1
+				key = 0.7477 1
+				key = 0.70974 1
+				key = 0.6522 1
+				key = 0.61319 1
+				key = 0.57371 1
+				key = 0.53376 1
+				key = 0.49353 0.99
+				key = 0.45302 0.98
+				key = 0.41232 0.96
+				key = 0.37147 0.94
+				key = 0.31021 0.92
+				key = 0.26937 0.8
+				key = 0.22858 0.88
+				key = 0.20826 0.86
+				key = 0.18803 0.84
+				key = 0.1679 0.82
+				key = 0.14781 0.8
+				key = 0.12787 0.78
+				key = 0.1084 0.76
+				key = 0.08926 0.74
+				key = 0.07027 0.72
+				key = 0.05137 0.7
+				key = 0.03252 0.65
+				key = 0.01367 0.6
+				key = 0.001 0.25
+			}
+		}
+	}
+	
+}
+
+@PART[EDB-VLM-S-50]:FOR[RealPlume]:NEEDS[SmokeScreen]{
+
+	PLUME
+    {
+        name = Solid-Lower
+        transformName = thrustTransform
+        localRotation = 0,0,0
+        flarePosition = 0,0,0.0
+        plumePosition = 0,0,0.0
+        fixedScale = 1.0
+        energy = 1
+        speed = 1
+    }
+	@MODULE[ModuleEngines*]
+	{
+		@name = ModuleEnginesRF
+	}
+	@MODULE[ModuleEngineConfigs]
+	{
+		%type = ModuleEnginesRF
+        @CONFIG,*
+		{
+			%powerEffectName = Solid-Lower
+		}
+	}
+
+	
+}
+
+@PART[EDB-VLM-S-50V]:FOR[RealismOverhaul]
+{
+	%RSSROConfig = True
+	
+	!MODEL{}
+	MODEL
+	{
+		model = EDBMods/Parts/SmallRockets/VLM-S-50V
+		scale = 1,1,1
+	}
+	
+	@scale = 1.0
+	
+	@MODULE[ModuleEngines*]{
+		@maxThrust = 459.0
+		
+		@PROPELLANT[SolidFuel]{
+			@name = HTPB
+		}
+		
+		@atmosphereCurve
+		{
+			@key,0 = 0 282.0
+			@key,1 = 1 200.0
+		}
+	}
+	
+	@RESOURCE[SolidFuel]{
+		@name = HTPB
+		@amount = 6620.0
+		@maxAmount = 6620.0
+	}
+	
+	MODULE
+	{
+		name = ModuleEngineConfigs
+		type = ModuleEngines
+		configuration = S-50V
+		modded = false
+		CONFIG
+		{
+			name = S-50V
+			maxThrust = 459.0
+			heatProduction = 100
+			PROPELLANT
+			{
+				name = HTPB
+				ratio = 1
+				DrawGauge = True
+			}
+			atmosphereCurve
+			{
+				key = 0 282.0
+				key = 1 200.0
+			}
+			curveResource = HTPB
+			thrustCurve
+			{
+				key = 0.98425 0.92
+				key = 0.96965 0.93
+				key = 0.95475 0.94
+				key = 0.93948 0.948
+				key = 0.92393 0.962
+				key = 0.90799 0.98
+				key = 0.89178 0.994
+				key = 0.85806 1
+				key = 0.80449 1
+				key = 0.7477 1
+				key = 0.70974 1
+				key = 0.6522 1
+				key = 0.61319 1
+				key = 0.57371 1
+				key = 0.53376 1
+				key = 0.49353 0.99
+				key = 0.45302 0.98
+				key = 0.41232 0.96
+				key = 0.37147 0.94
+				key = 0.31021 0.92
+				key = 0.26937 0.8
+				key = 0.22858 0.88
+				key = 0.20826 0.86
+				key = 0.18803 0.84
+				key = 0.1679 0.82
+				key = 0.14781 0.8
+				key = 0.12787 0.78
+				key = 0.1084 0.76
+				key = 0.08926 0.74
+				key = 0.07027 0.72
+				key = 0.05137 0.7
+				key = 0.03252 0.65
+				key = 0.01367 0.6
+				key = 0.001 0.25
+			}
+		}
+	}
+	
+}
+
+@PART[EDB-VLM-S-50V]:FOR[RealPlume]:NEEDS[SmokeScreen]{
+
+	PLUME
+    {
+        name = Solid-Lower
+        transformName = thrustTransform
+        localRotation = 0,0,0
+        flarePosition = 0,0,0.0
+        plumePosition = 0,0,0.0
+        fixedScale = 1.0
+        energy = 1
+        speed = 1
+    }
+	@MODULE[ModuleEngines*]
+	{
+		@name = ModuleEnginesRF
+	}
+	@MODULE[ModuleEngineConfigs]
+	{
+		%type = ModuleEnginesRF
+        @CONFIG,*
+		{
+			%powerEffectName = Solid-Lower
+		}
+	}
+
+	
+}
+
+@PART[EDB-VLM-Second]:FOR[RealismOverhaul]
+{
+	%RSSROConfig = True
+	
+	!MODEL{}
+	MODEL
+	{
+		model = EDBMods/Parts/SmallRockets/VLM-Second
+		scale = 1,1,1
+	}
+	
+	@scale = 1.0
+	
+	@MODULE[ModuleEngines*]{
+		@maxThrust = 459.0
+		
+		@PROPELLANT[SolidFuel]{
+			@name = HTPB
+		}
+		
+		@atmosphereCurve
+		{
+			@key,0 = 0 282.0
+			@key,1 = 1 200.0
+		}
+	}
+	
+	@RESOURCE[SolidFuel]{
+		@name = HTPB
+		@amount = 6620.0
+		@maxAmount = 6620.0
+	}
+	
+	MODULE
+	{
+		name = ModuleEngineConfigs
+		type = ModuleEngines
+		configuration = S-50V
+		modded = false
+		CONFIG
+		{
+			name = S-50V
+			maxThrust = 459.0
+			heatProduction = 100
+			PROPELLANT
+			{
+				name = HTPB
+				ratio = 1
+				DrawGauge = True
+			}
+			atmosphereCurve
+			{
+				key = 0 282.0
+				key = 1 200.0
+			}
+			curveResource = HTPB
+			thrustCurve
+			{
+				key = 0.98425 0.92
+				key = 0.96965 0.93
+				key = 0.95475 0.94
+				key = 0.93948 0.948
+				key = 0.92393 0.962
+				key = 0.90799 0.98
+				key = 0.89178 0.994
+				key = 0.85806 1
+				key = 0.80449 1
+				key = 0.7477 1
+				key = 0.70974 1
+				key = 0.6522 1
+				key = 0.61319 1
+				key = 0.57371 1
+				key = 0.53376 1
+				key = 0.49353 0.99
+				key = 0.45302 0.98
+				key = 0.41232 0.96
+				key = 0.37147 0.94
+				key = 0.31021 0.92
+				key = 0.26937 0.8
+				key = 0.22858 0.88
+				key = 0.20826 0.86
+				key = 0.18803 0.84
+				key = 0.1679 0.82
+				key = 0.14781 0.8
+				key = 0.12787 0.78
+				key = 0.1084 0.76
+				key = 0.08926 0.74
+				key = 0.07027 0.72
+				key = 0.05137 0.7
+				key = 0.03252 0.65
+				key = 0.01367 0.6
+				key = 0.001 0.25
+			}
+		}
+	}
+	
+}
+
+@PART[EDB-VLM-Second]:FOR[RealPlume]:NEEDS[SmokeScreen]{
+
+	PLUME
+    {
+        name = Solid-Lower
+        transformName = thrustTransform
+        localRotation = 0,0,0
+        flarePosition = 0,0,0.0
+        plumePosition = 0,0,0.0
+        fixedScale = 1.0
+        energy = 1
+        speed = 1
+    }
+	@MODULE[ModuleEngines*]
+	{
+		@name = ModuleEnginesRF
+	}
+	@MODULE[ModuleEngineConfigs]
+	{
+		%type = ModuleEnginesRF
+        @CONFIG,*
+		{
+			%powerEffectName = Solid-Lower
+		}
+	}
+
 	
 }
