--- a/EDBMods/Parts/SmallRockets/TU-SmallRockets.cfg
+++ b/EDBMods/Parts/SmallRockets/TU-SmallRockets.cfg
@@ -1413,3 +1413,205 @@ KSP_MODEL_SHADER
 		}
 	}
 }
+
+KSP_MODEL_SHADER
+{
+	name = EDB-VLM-Adapter
+	model = EDBMods/Parts/SmallRockets/VLM-Adapter
+	TEXTURE
+    {
+        shader = SSTU/PBR/Metallic
+        PROPERTY
+		{
+			name = _Color
+			color = 1.0,1.0,1.0   //higher numbers are lighter
+		}
+		PROPERTY
+		{
+			name = _Metal
+			float = 0.7   // 0>less metallic 1>more metallic(mirror finish)
+		}
+		PROPERTY
+			{
+			name = _Smoothness
+			float = 0.7   // 1>less blurry 0>more blurry
+		}
+	}
+}
+
+KSP_MODEL_SHADER
+{
+	name = EDB-VLM-Control
+	model = EDBMods/Parts/SmallRockets/VLM-Control
+	TEXTURE
+    {
+        shader = SSTU/PBR/Metallic
+        PROPERTY
+		{
+			name = _Color
+			color = 1.0,1.0,1.0   //higher numbers are lighter
+		}
+		PROPERTY
+		{
+			name = _Metal
+			float = 0.7   // 0>less metallic 1>more metallic(mirror finish)
+		}
+		PROPERTY
+			{
+			name = _Smoothness
+			float = 0.7   // 1>less blurry 0>more blurry
+		}
+	}
+}
+
+
+
+KSP_MODEL_SHADER
+{
+	name = EDB-VLM-First
+	model = EDBMods/Parts/SmallRockets/VLM-First
+	TEXTURE
+    {
+        shader = SSTU/PBR/Metallic
+        PROPERTY
+		{
+			name = _Color
+			color = 1.0,1.0,1.0   //higher numbers are lighter
+		}
+		PROPERTY
+		{
+			name = _Metal
+			float = 0.7   // 0>less metallic 1>more metallic(mirror finish)
+		}
+		PROPERTY
+			{
+			name = _Smoothness
+			float = 0.7   // 1>less blurry 0>more blurry
+		}
+	}
+}
+
+KSP_MODEL_SHADER
+{
+	name = EDB-VLM-HotStage
+	model = EDBMods/Parts/SmallRockets/VLM-HotStage
+	TEXTURE
+    {
+        shader = SSTU/PBR/Metallic
+        PROPERTY
+		{
+			name = _Color
+			color = 1.0,1.0,1.0   //higher numbers are lighter
+		}
+		PROPERTY
+		{
+			name = _Metal
+			float = 0.7   // 0>less metallic 1>more metallic(mirror finish)
+		}
+		PROPERTY
+			{
+			name = _Smoothness
+			float = 0.7   // 1>less blurry 0>more blurry
+		}
+	}
+}
+
+KSP_MODEL_SHADER
+{
+	name = EDB-VLM-S-44
+	model = EDBMods/Parts/SmallRockets/VLM-S-44
+	TEXTURE
+    {
+        shader = SSTU/PBR/Metallic
+        PROPERTY
+		{
+			name = _Color
+			color = 1.0,1.0,1.0   //higher numbers are lighter
+		}
+		PROPERTY
+		{
+			name = _Metal
+			float = 0.5  // 0>less metallic 1>more metallic(mirror finish)
+		}
+		PROPERTY
+			{
+			name = _Smoothness
+			float = 0.5   // 1>less blurry 0>more blurry
+		}
+	}
+}
+
+KSP_MODEL_SHADER
+{
+	name = EDB-VLM-S-50
+	model = EDBMods/Parts/SmallRockets/VLM-S-50
+	TEXTURE
+    {
+        shader = SSTU/PBR/Metallic
+        PROPERTY
+		{
+			name = _Color
+			color = 1.0,1.0,1.0   //higher numbers are lighter
+		}
+		PROPERTY
+		{
+			name = _Metal
+			float = 0.7   // 0>less metallic 1>more metallic(mirror finish)
+		}
+		PROPERTY
+			{
+			name = _Smoothness
+			float = 0.7   // 1>less blurry 0>more blurry
+		}
+	}
+}
+
+KSP_MODEL_SHADER
+{
+	name = EDB-VLM-S-50V
+	model = EDBMods/Parts/SmallRockets/VLM-S-50V
+	TEXTURE
+    {
+        shader = SSTU/PBR/Metallic
+        PROPERTY
+		{
+			name = _Color
+			color = 1.0,1.0,1.0   //higher numbers are lighter
+		}
+		PROPERTY
+		{
+			name = _Metal
+			float = 0.7   // 0>less metallic 1>more metallic(mirror finish)
+		}
+		PROPERTY
+			{
+			name = _Smoothness
+			float = 0.7   // 1>less blurry 0>more blurry
+		}
+	}
+}
+
+KSP_MODEL_SHADER
+{
+	name = EDB-VLM-Second
+	model = EDBMods/Parts/SmallRockets/VLM-Second
+	TEXTURE
+    {
+        shader = SSTU/PBR/Metallic
+        PROPERTY
+		{
+			name = _Color
+			color = 1.0,1.0,1.0   //higher numbers are lighter
+		}
+		PROPERTY
+		{
+			name = _Metal
+			float = 0.7   // 0>less metallic 1>more metallic(mirror finish)
+		}
+		PROPERTY
+			{
+			name = _Smoothness
+			float = 0.7   // 1>less blurry 0>more blurry
+		}
+	}
+}
