--- a/EDBMods/Parts/SmallRockets/RO-CubeSats.cfg
+++ b/EDBMods/Parts/SmallRockets/RO-CubeSats.cfg
@@ -223,3 +223,98 @@
 	
 	
 }
+
+@PART[EDB-BioExperiment1]:FOR[RealismOverhaul]
+{
+	%RSSROConfig = True
+	
+	!MODEL{}
+	MODEL
+	{
+		model = EDBMods/Parts/SmallRockets/BioExperiment1
+		scale = 2,2,2
+	}
+	@scale = 2.0
+	
+	
+}
+
+@PART[EDB-Core1]:FOR[RealismOverhaul]
+{
+	%RSSROConfig = True
+	
+	!MODEL{}
+	MODEL
+	{
+		model = EDBMods/Parts/SmallRockets/Core1
+		scale = 2,2,2
+	}
+	@scale = 2.0
+	
+	
+}
+
+@PART[EDB-Dish1]:FOR[RealismOverhaul]
+{
+	%RSSROConfig = True
+	
+	!MODEL{}
+	MODEL
+	{
+		model = EDBMods/Parts/SmallRockets/Dish1
+		scale = 3,3,3
+	}
+	@scale = 3.0
+}
+
+@PART[EDB-CAPSTONE]:FOR[RealismOverhaul]
+{
+	%RSSROConfig = True
+	
+	!MODULE[ModuleRCSFX]{}
+	
+	MODULE
+	{
+		name = ModuleRCSFX
+		thrusterTransformName = RCSthruster
+		thrusterPower = 0.01
+
+		PROPELLANT
+		{
+			name = Hydrazine
+			ratio = 1.0
+			DrawGauge = True
+		}
+		atmosphereCurve
+		{
+			key = 0 212.0
+			key = 1 1.0
+		}
+	}
+	
+	!RESOURCE[ElectricCharge]{}
+	
+	MODULE
+	{
+		name = ModuleFuelTanks
+		basemass = -1
+		volume = 4.0
+		type = ServiceModule
+		
+		
+		TANK
+		{
+			name = ElectricCharge
+			amount = 1000.0
+			maxAmount = 1000.0
+		}
+		TANK
+		{
+			name = Hydrazine
+			amount = 3.0
+			maxAmount = 3.0
+		}
+		
+	}
+	
+}
