RealAntenna patch for Cubesats

--- a/EDBMods/Parts/SmallRockets/RO-CubeSats.cfg
+++ b/EDBMods/Parts/SmallRockets/RO-CubeSats.cfg
@@ -65,8 +65,14 @@
 {
 	%RSSROConfig = True
 	
-	
 }
+
+@PART[EDB-PlatformAnt1]:FOR[RealAntennas]
+{
+	!MODULE[ModuleDataTransmitter],* {}
+	%MODULE[ModuleRealAntenna] { %referenceGain = 3.0 }
+}
+
 
 @PART[EDB-PlatformAnt2]:FOR[RealismOverhaul]
 {
@@ -75,12 +81,25 @@
 	
 }
 
+@PART[EDB-PlatformAnt2]:FOR[RealAntennas]
+{
+	!MODULE[ModuleDataTransmitter],* {}
+	%MODULE[ModuleRealAntenna] { %referenceGain = 2.0 }
+}
+
+
 @PART[EDB-PlatformAnt3]:FOR[RealismOverhaul]
 {
 	%RSSROConfig = True
 	
-	
 }
+
+@PART[EDB-PlatformAnt3]:FOR[RealAntennas]
+{
+	!MODULE[ModuleDataTransmitter],* {}
+	%MODULE[ModuleRealAntenna] { %referenceGain = 2.0 }
+}
+
 
 @PART[EDB-PlatformAnt4]:FOR[RealismOverhaul]
 {
@@ -88,6 +107,13 @@
 	
 	
 }
+
+@PART[EDB-PlatformAnt4]:FOR[RealAntennas]
+{
+	!MODULE[ModuleDataTransmitter],* {}
+	%MODULE[ModuleRealAntenna] { %referenceGain = 2.0 }
+}
+
 
 @PART[EDB-PlatformControl]:FOR[RealismOverhaul]
 {
@@ -173,12 +199,41 @@
 {
 	%RSSROConfig = True
 	
+	!MODULE[ModuleReactionWheel]{}
+	
+	MODULE
+	{
+		name = ModuleReactionWheel
+		PitchTorque = 0.002
+		YawTorque = 0.002
+		RollTorque = 0.002
+		RESOURCE
+		{
+			name = ElectricCharge
+			rate = 0.0002
+		}
+	}
 	
 }
 
 @PART[EDB-PlatformRW2]:FOR[RealismOverhaul]
 {
 	%RSSROConfig = True
+	
+	!MODULE[ModuleReactionWheel]{}
+	
+	MODULE
+	{
+		name = ModuleReactionWheel
+		PitchTorque = 0.001
+		YawTorque = 0.001
+		RollTorque = 0.001
+		RESOURCE
+		{
+			name = ElectricCharge
+			rate = 0.0001
+		}
+	}
 	
 	
 }
@@ -224,6 +279,14 @@
 	
 }
 
+@PART[EDB-WhipAntenna]:FOR[RealAntennas]
+{
+	!MODULE[ModuleDataTransmitter],* {}
+	%MODULE[ModuleRealAntenna] { %referenceGain = 3.0 }
+}
+
+
+
 @PART[EDB-BioExperiment1]:FOR[RealismOverhaul]
 {
 	%RSSROConfig = True
@@ -265,6 +328,12 @@
 		scale = 3,3,3
 	}
 	@scale = 3.0
+}
+
+@PART[EDB-Dish1]:FOR[RealAntennas]
+{
+	!MODULE[ModuleDataTransmitter],* {}
+	%MODULE[ModuleRealAntenna] { %antennaDiameter = 0.5}
 }
 
 @PART[EDB-CAPSTONE]:FOR[RealismOverhaul]
