Adjusted CubeSat Solar Panels

--- a/EDBMods/Parts/SmallRockets/Panel3US.cfg
+++ b/EDBMods/Parts/SmallRockets/Panel3US.cfg
@@ -15,7 +15,7 @@ PART
 	TechRequired = start
 	entryCost = 1
 	cost = 2
-	category = Structural
+	category = Electrical
 	subcategory = 0
 	title = 3U Panel with Solar
 	manufacturer = Surestrut Industries
@@ -42,7 +42,7 @@ PART
 		pivotName = suncatcher
 		isBreakable = false
 		resourceName = ElectricCharge
-		chargeRate = 0.078
+		chargeRate = 0.04
 		extendActionName = #autoLOC_6001805 //#autoLOC_6001805 = Extend <<1>>
 		retractActionName = #autoLOC_6001806 //#autoLOC_6001806 = Retract <<1>>
 		extendpanelsActionName = #autoLOC_6001807 //#autoLOC_6001807 = Toggle <<1>>
