--- a/EDBMods/Parts/SmallRockets/Panel1US.cfg
+++ b/EDBMods/Parts/SmallRockets/Panel1US.cfg
@@ -16,7 +16,7 @@ PART
 	TechRequired = start
 	entryCost = 1
 	cost = 1
-	category = Structural
+	category = Electrical
 	subcategory = 0
 	title = 1U Panel with Solar
 	manufacturer = Surestrut Industries
@@ -43,7 +43,7 @@ PART
 		pivotName = suncatcher
 		isBreakable = false
 		resourceName = ElectricCharge
-		chargeRate = 0.026
+		chargeRate = 0.014
 		extendActionName = #autoLOC_6001805 //#autoLOC_6001805 = Extend <<1>>
 		retractActionName = #autoLOC_6001806 //#autoLOC_6001806 = Retract <<1>>
 		extendpanelsActionName = #autoLOC_6001807 //#autoLOC_6001807 = Toggle <<1>>
